# cicd-debugger-env-final

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  baseline_inference.py  final_compliance_check.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  simple_test.py  test_grader.py  validate-submission.sh  validate_tasks_strict.py
artifacts/: baseline_scores.json  metrics.json  reward_curve.csv  success_rate.csv
env/: __init__.py  anti_hacking.py  environment.py  hidden_tests.py  models.py  pipeline_simulator.py  rewards.py
env/graders/: __init__.py  deterministic.py  llm_judge.py
env/tasks/: __init__.py  easy.py  hard.py  medium.py  task_types.py
inference/: __init__.py  metrics.py  model_wrapper.py  prompts.py  visualize.py
server/: app.py
tests/: test_day2_engine.py  test_env.py  test_inference.py  test_judge.py  test_server_api.py
